--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
    	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
- 	<script src="js/script.js"></script>
+ 	<script src="script.js"></script>
 	<link rel="stylesheet" href="style.css" />
 
 </head>
@@ -16,54 +16,30 @@
 	</div>
 	<div class="container scoreBoard">
 		<div class="row">
-			<div class="col-xs-1">Player 1 score:</div>
-			<div class="col-xs-1">Player 1 turns:</div>
+			<div class="col-xs-1 pOneScore">Player 1 score:</div>
+			<div class="col-xs-1 pOneTurn">Player 1 turns:</div>
 			<div class="col-xs-4 commentBox">Comment Box:</div>
-			<div class="col-xs-1">Player 2 score:</div>
-			<div class="col-xs-1">Player 2 turns:</div>
+			<div class="col-xs-1 pTwoScore">Player 2 score:</div>
+			<div class="col-xs-1 pTwoTurn">Player 2 turns:</div>
 		</div>
 	</div>
+
 	<div class="container gameBoard">
-		<div class="row">
-			<div class="col-xs-1 cell">1</div>
-			<div class="col-xs-1 cell">2</div>
-			<div class="col-xs-1 cell">3</div>
-			<div class="col-xs-1 cell">4</div>
-<!-- 			<div class="col-xs-1 cell">5</div>
-			<div class="col-xs-1 cell">6</div> -->
-		</div>
-		<div class="row">
-			<div class="col-xs-1 cell">7</div>
-			<div class="col-xs-1 cell">8</div>
-			<div class="col-xs-1 cell">9</div>
-			<div class="col-xs-1 cell">10</div>
-<!-- 			<div class="col-xs-1 cell">11</div>
-			<div class="col-xs-1 cell">12</div> -->
-		</div>
-		<div class="row">
-			<div class="col-xs-1 cell">13</div>
-			<div class="col-xs-1 cell">14</div>
-			<div class="col-xs-1 cell">15</div>
-			<div class="col-xs-1 cell">16</div>
-<!-- 			<div class="col-xs-1 cell">17</div>
-			<div class="col-xs-1 cell">18</div> -->
-		</div>
-		<div class="row">
-			<div class="col-xs-1 cell">19</div>
-			<div class="col-xs-1 cell">20</div>
-			<div class="col-xs-1 cell">21</div>
-			<div class="col-xs-1 cell">22</div>
-<!-- 			<div class="col-xs-1 cell">23</div>
-			<div class="col-xs-1 cell">24</div> -->
-		</div>
-	</div>
+
+
+	</div> <!--end container gameboard -->
+
 	<div class="container controlPanel">
 		<div class="row">
-			<div class="col-xs-4 buttonsPlay">Buttons</div>
+			<div class="col-xs-4 buttonsPlay">
+				<form class="form" id="game-button">
+					<input type="submit" class="btn btn-primary" value="START GAME">
+				</form>
+			</div>
 			<div class="col-xs-4 col-xs-offset-2 instructPlay">How to Play</div>
 		</div>
 
-	</div>
+	</div> <!--end container controlPanel-->
 </body>
 
 </html>
