more revisions to memory game

--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
 	</div>
 	<div class="container scoreBoard">
 		<div class="row">
-			<div class="col-xs-2 pOneScore"><h5>Player 1 SCORE: <h3>0</h3></h5></div>
-			<div class="col-xs-2 pOneMisses"><h5>Player 1 MISSES: <h3>0</h3></h5></div>
+			<div class="col-xs-1 pOne">Player <br/>1</div>
+			<div class="col-xs-1 pOneScore">Score: <br/>0</div>
+			<div class="col-xs-1 pOneMatch">Match: <br/>0</div>
+			<div class="col-xs-1 pOneMiss">Miss: <br/>0</div>
+
 			<div class="col-xs-4 commentBox">Comment Box:</div>
-			<div class="col-xs-1 pTwoScore">Player 2 score:</div>
-			<div class="col-xs-1 pTwoTurn">Player 2 turns:</div>
+
+			<div class="col-xs-1 pTwo">Player <br/>2</div>
+			<div class="col-xs-1 pTwoScore">Score: <br/>0</div>
+			<div class="col-xs-1 pTwoMatch">Match: <br/>0</div>
+			<div class="col-xs-1 pTwoMiss">Miss: <br/>0</div>
 		</div>
 	</div>
 
@@ -35,7 +41,7 @@
 					<input type="submit" class="btn btn-primary" value="START GAME">
 				</form>
 				<form class="form" id="reset-button">
-					<input type="reset" value="Reset">
+					<input type="submit" class="btn btn-primary" value="Reset">
 				</form>
 			</div>
 			<div class="col-xs-4 col-xs-offset-2 instructPlay">How to Play</div>
