--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 			<div class="col-xs-1 pOneMiss">Miss: <br/>0</div>
 
 			<div class="col-xs-4 commentBox">Comment Box:</div>
-
+			
 			<div class="col-xs-1 pTwo">Player <br/>2</div>
 			<div class="col-xs-1 pTwoScore">Score: <br/>0</div>
 			<div class="col-xs-1 pTwoMatch">Match: <br/>0</div>
 			<div class="col-xs-1 pTwoMiss">Miss: <br/>0</div>
+
 		</div>
 	</div>
 
@@ -37,15 +38,19 @@
 	<div class="container controlPanel">
 		<div class="row">
 			<div class="col-xs-4 buttonsPlay">
-				<form class="form" id="game-button">
-					<input type="submit" class="btn btn-primary" value="START GAME">
+
+				<form class="form" id="onePlayer-button">
+					<input type="submit" class="btn btn-default" value="One Player">
 				</form>
-				<form class="form" id="reset-button">
-					<input type="submit" class="btn btn-primary" value="Reset">
+				<form class="form" id="twoPlayer-button">
+					<input type="submit" class="btn btn-default" value="Two Player">
 				</form>
+			<!-- 	<form class="form" id="start-button">
+					<input type="submit" class="btn btn-primary" value="Start">
+				</form> -->
 			</div>
 			<div class="col-xs-4 col-xs-offset-2 instructPlay">How to Play</div>
-		</div>
+		</div> <!--end row -->
 
 	</div> <!--end container controlPanel-->
 </body>
