--- a/index.html
+++ b/index.html
@@ -39,15 +39,17 @@
 		<div class="row">
 			<div class="col-xs-4 buttonsPlay">
 
-				<form class="form" id="onePlayer-button">
-					<input type="submit" class="btn btn-default" value="One Player">
+				<form class="form" id="Start-button">
+					<input type="submit" class="btn btn-default" value="START">
 				</form>
-				<form class="form" id="twoPlayer-button">
+<!-- 				<form class="form" id="twoPlayer-button">
 					<input type="submit" class="btn btn-default" value="Two Player">
-				</form>
-			<!-- 	<form class="form" id="start-button">
-					<input type="submit" class="btn btn-primary" value="Start">
 				</form> -->
+<!-- 				<form id="reset-button">
+					<input type="submit" value="reset">
+				</form> -->
+
+
 			</div>
 			<div class="col-xs-4 col-xs-offset-2 instructPlay">How to Play</div>
 		</div> <!--end row -->
